Storico new modify

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,6 +33,12 @@
       Scopri i film attualmente in sala e la loro programmazione settimanale.
       Pianifica la tua visita e non perdere le nuove uscite!
     </p>
-    <button class="cta-btn">Visualizza la Programmazione</button>
+    <button
+      class="cta-btn"
+      routerLink="/programmazione"
+      routerLinkActive="active-link"
+    >
+      Visualizza la Programmazione
+    </button>
   </section>
 </div>
